git-annex (0.23) UNRELEASED; urgency=low

  * Support ssh remotes with a port specified.
  * whereis: New subcommand to show where a file's content has gotten to.

 -- Joey Hess <joeyh@debian.org>  Sat, 05 Mar 2011 15:39:13 -0400

git-annex (0.22) unstable; urgency=low

  * Git annexes can now be attached to bare git repositories.
    (Both the local and remote host must have this version of git-annex
    installed for it to work.)
  * Support filenames that start with a dash; when such a file is passed
    to a utility it will be escaped to avoid it being interpreted as an
    option. (I went a little overboard and got the type checker involved
    in this, so such files are rather comprehensively supported now.)
  * New backends: SHA512 SHA384 SHA256 SHA224
    (Supported on systems where corresponding shaNsum commands are available.)
  * describe: New subcommand that can set or change the description of
    a repository.
  * Fix test suite to reap zombies.
    (Zombies can be particularly annoying on OSX; thanks to Jimmy Tang
    for his help eliminating the infestation... for now.)
  * Make test suite not rely on a working cp -pr.
    (The Unix wars are still ON!)
  * Look for dir.git directories the same as git does.
  * Support remote urls specified as relative paths.
  * Support non-ssh remote paths that contain tilde expansions.
  * fsck: Check for and repair location log damage.
  * Bugfix: When fsck detected and moved away corrupt file content, it did
    not update the location log.

 -- Joey Hess <joeyh@debian.org>  Fri, 04 Mar 2011 15:10:57 -0400

git-annex (0.21) unstable; urgency=low

  * test: Don't rely on chmod -R working.
  * unannex: Fix recently introduced bug when attempting to unannex more
    than one file at a time.
  * test: Set git user name and email in case git can't guess values.
  * Fix display of unicode filenames.

 -- Joey Hess <joeyh@debian.org>  Fri, 11 Feb 2011 23:21:08 -0400

git-annex (0.20) unstable; urgency=low
