@@ -2,6 +2,12 @@ git-annex (0.23) UNRELEASED; urgency=low
 
   * Support ssh remotes with a port specified.
   * whereis: New subcommand to show where a file's content has gotten to.
+  * Haskell's IO layer crashes on characters > 255 when in a non-unicode
+    locale. Until Haskell gets better behavior, put in an admittedly
+    ugly workaround for that: git-annex forces utf8 output mode no matter
+    what locale is selected. So if you use a non-utf8 locale, your
+    filenames with characters > 127 will not be displayed as you'd expect.
+    But at least it won't crash.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 05 Mar 2011 15:39:13 -0400
 
